--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="left-col">
                 <p class="subhead">Events &amp; Entertainment</p>
-                <h1>THE.TROY.GROUP</h1>
+                <h1><span>THE.TROY</span>.GROUP</h1>
 
                 <div class="showcase-cta">
                     <a href="Tryforfree.html" class="pri-cta"> Try For Free</a>
