--- a/About.html
+++ b/About.html
@@ -26,7 +26,7 @@
                 </ul>
 
                 <ul class="sec-nav">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="Book-Us-Now-cta"><a href="Tryforfree.html">Book Us Now</a></li>
                 </ul>
             </nav>
@@ -90,7 +90,8 @@
                 </div>
             </section>
             <footer> 
-                <i class="fa fa-instagram" style="font-size:48px;color:red"></i>
+                <!-- <i class="fa fa-instagram" style="font-size:48px;color:red"></i> -->
+                <i class="fa fa-instagram"></i>
             </footer>
 
             <script>
