--- a/Tryforfree.html
+++ b/Tryforfree.html
@@ -26,7 +26,7 @@
                 </ul>
 
                 <ul class="sec-nav">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="Book-Us-Now-cta1"><a href="#">Book Us Now</a></li>
                 </ul>
             </nav>
