--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </ul>
 
                 <ul class="sec-nav">
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <li class="Book-Us-Now-cta"><a href="Tryforfree.html">Book Us Now</a></li>
                 </ul>
             </nav>
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
         <div class="container">
             <div class="contact-left">
                 <h2>Contact</h2>
@@ -107,11 +107,16 @@
                     <label for="name">Name</label>
                     <input type="text" id="name" name="name">
 
+                    <label for="phone">Phone</label>
+                    <input type="number" id="phone" name="phone">
+
                     <label for="email">E-mail</label>
                     <input type="email" id="email" name="email">
 
                     <label for="message">Message</label>
                     <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+                   
 
                     <input type="submit" class="send-message-cta" value="Send message">
                 </form>
